force-app/src/objects/TR1__Contact_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__CandidateGender__c</fullName>
        <label>Gender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__CandidateId__c</fullName>
        <inlineHelpText>Donot change this mapping</inlineHelpText>
        <label>CandidateId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Citizenship__c</fullName>
        <label>Citizenship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__City__c</fullName>
        <inlineHelpText>Please use only the OtherCity or the MailingCity fields for this mapping</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__CountryCode__c</fullName>
        <inlineHelpText>Please use only the OtherCountry or  MailingCountry fields for this mapping</inlineHelpText>
        <label>CountryCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Country_Failover__c</fullName>
        <label>Country Failover</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Current_Position__c</fullName>
        <label>Current Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DOB__c</fullName>
        <label>DOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DriversLicense__c</fullName>
        <label>Drivers License</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Drivers_License__c</fullName>
        <label>Drivers License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ESHighestEducationLevel__c</fullName>
        <label>ESHighestEducationLevel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fields_to_Update__c</fullName>
        <inlineHelpText>Please note that enabling field update for FirstName / Email might void duplicate check</inlineHelpText>
        <label>Fields to Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__FullName__c</fullName>
        <label>Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Full_Name_Alternate__c</fullName>
        <label>Full Name Alternate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Gender__c</fullName>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__HighestEducationLevel__c</fullName>
        <label>HighestEducationLevel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__HomePhone__c</fullName>
        <label>HomePhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__IT_Skills__c</fullName>
        <label>IT Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Languages__c</fullName>
        <label>Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__NationalID__c</fullName>
        <label>NationalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Nationality__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__OtherPhone__c</fullName>
        <label>OtherPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__PostalCode__c</fullName>
        <inlineHelpText>Please use only the OtherPostalCode or the MailingPostalCode fields for this mapping</inlineHelpText>
        <label>PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__State_Failover__c</fullName>
        <label>Region Failover</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__StreetAddress1__c</fullName>
        <label>StreetAddress1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__StreetAddress3__c</fullName>
        <label>StreetAddress3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Street_Address_Separator__c</fullName>
        <label>Street Address Separator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Street_Number_First__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, the Street Address will be generated with the Street Number followed by the Street Name.

When unchecked, the Street Address will be generated with the Street Name followed by the Street Number.

Note: A comma is used to combine both the Street Number and Street Name.</description>
        <inlineHelpText>When checked, the Street Address will be generated with the Street Number followed by the Street Name.When unchecked, the Street Address will be generated with the Street Name followed by the Street Number.
Note: A comma is used to combine both of them.</inlineHelpText>
        <label>Street Number First</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__WorkPhone__c</fullName>
        <label>WorkPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact Mapping</label>
    <pluralLabel>Contact Mapping</pluralLabel>
</CustomObject>